--- a/scss/contrib.scss
+++ b/scss/contrib.scss
@@ -345,10 +345,10 @@ tr td:last-child {
   border-radius: 8px;
   padding: 2px 10px;
 }
-.view-commerce-backoffice-order-messages #message-commerce-body-add-more-wrapper .resizable-textarea {
+.view-commerce-backoffice-order-messages .form-type-textarea .resizable-textarea {
   margin: 0 2px 30px 0; /* LTR */
 }
-.view-commerce-backoffice-order-messages #message-commerce-body-add-more-wrapper .filter-wrapper {
+.view-commerce-backoffice-order-messages .form-type-textarea .filter-wrapper {
   border: 1px solid #eee;
   padding: 0 15px 10px;
 }
@@ -361,10 +361,16 @@ tr td:last-child {
 .view-commerce-backoffice-products tr.views-row-active td {
   background: transparent;
 }
+.view-commerce-backoffice-order-messages {
+  margin-bottom: 20px;
+}
 .view-commerce-backoffice-order-messages > .view-footer {
   padding-top: 20px;
 }
-#commerce-backoffice-order-message-form > div > fieldset > legend .fieldset-legend {
+.view-commerce-backoffice-order-messages form > div > fieldset > legend {
+  height: 30px;
+}
+.view-commerce-backoffice-order-messages form > div > fieldset > legend .fieldset-legend {
   margin: 0 0 10px 0;
   border: 0;
 }
